--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -35,7 +35,7 @@
 	</div>
 
 	<script src='jquery-3.3.1.js'></script>
-	<script src='/home/infoetu/demeces/ProjetAgileNeodrone/neodrone_js/src/connection.js'></script>
+	<script src='./js/connection.js'></script>
 
 </body>
 </html>
