--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -18,21 +18,18 @@
 <body>
 	<div id="output">
 		<form id="formConnection" method="POST">
-			<label for="login">Identifiant :</label>
-			<input type="text" name="login">
+			<label for="login">Mail :</label>
+			<input type="text" id="login" name="login">
 		</br>
 			<label for="password">Mot de passe :</label>
-			<input type="password" name="password">
+			<input type="password" id="mdp" name="password">
 		</br>
 			<input type="submit" name="btnPassword" value="Se Connecter">
 		</form>
-		<p id="messageErreur" style='color:red;display:none;'>Erreur saisie mail</p>
+		<p id="messageErreur" style='color:red;display:none;'>Erreur de saisie des identifiants</p>
 	</div>
 
 
-	
-
-	</div>
 
 	<script src='jquery-3.3.1.js'></script>
 	<script src='./js/lib.js'></script>
