--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -17,7 +17,8 @@
 </head>
 <body>
 	<div id="output">
-		<form id="formConnection" method="POST">
+		
+	<form id="formConnection" method="POST">
 			<label for="login">Mail :</label>
 			<input type="text" id="login" name="login">
 		</br>
@@ -27,7 +28,47 @@
 			<input type="submit" name="btnPassword" value="Se Connecter">
 		</form>
 		<p id="messageErreur" style='color:red;display:none;'>Erreur de saisie des identifiants</p>
+
+		
+	
+	<!--
+	<p>Ajout d'un utilisateur :</p>
+	<form id="formAjoutUser" method="POST" style =>
+			<label for="ajoutLogin">Mail :</label>
+			<input type="text" id="ajoutLogin">
+			</br>
+			<label for="ajoutPass">Mot de passe :</label>
+			<input type="text" id="ajoutPass" >
+			</br>
+			<label for="ajoutNom">Nom :</label>
+			<input type="text" id="ajoutNom">
+			</br>
+			<label for="ajoutPrenom">Prenom :</label>
+			<input type="text" id="ajoutPrenom">
+			</br>
+			<label for="ajoutCP">Code Postal :</label>
+			<input type="text" id="ajoutCP">
+			</br>
+			<label for="ajoutTelFixe">Telephone fixe :</label>
+			<input type="text" id="ajoutTelFixe">
+			</br>
+			<label for="ajoutTelPort">Telephone portable :</label>
+			<input type="text" id="ajoutTelPort">
+			</br>
+			<label for="ajoutFonct">Fonction :</label>
+			<input type="text" id="ajoutFonct">
+			</br>
+			<label for="ajoutEnt">Entreprise :</label>
+			<input type="text" id="ajoutEnt">
+			</br>
+			<label for="ajoutRue">Rue :</label>
+			<input type="text" id="ajoutRue">
+			</br>
+			<input type="submit" id="btnAjout" value="Créer utilisateur">
+		</form>
+	-->
 	</div>
+
 
 
 
