--- a/server/src/main/webapp/uploader/demo/index.html
+++ b/server/src/main/webapp/uploader/demo/index.html
@@ -18,6 +18,8 @@
 
 <body>
 
+  <input type="button" value="Nouvel upload" id="reloadUpload"/>
+
   <main role="main" class="container">
 <!--
     <div id="myDiv" style="border:2px solid black;">
@@ -26,13 +28,13 @@
 
     <span id="clientList" class="custom-dropdown big">
       <select id="clientSelect">
-          <option disabled selected value> selectionnez un client </option>
+          
       </select>
     </span>
 
     <span id="missionList" class="custom-dropdown big">
       <select id="missionSelect">
-          <option disabled selected value> selectionnez une mission </option>
+        
       </select>
     </span>
 
